# bd-board

./: .cta.json  .env.example  .gitignore  .prettierignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  emu7kh7jgadgbvef4tptgsitjgnr6fon.darc  eslint.config.js  manifest  package.json  pnpm-lock.yaml  vite.config.ts
.agents/skills/beads/agents/: openai.yaml
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/workflows/: ci.yml
.lavra/memory/: knowledge.jsonl  session-state.md
public/: manifest.json
scripts/: prepare-desktop-build.mjs
src/: routeTree.gen.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop.rs  lib.rs  main.rs
src/components/: app-icon.tsx  bead-card.tsx  bead-detail-modal.tsx  bead-detail-sheet.tsx  board-header.tsx  board-swimlanes.tsx  create-bead-dialog.tsx  desktop-probe-card.tsx  epic-progress.tsx  kanban-column.tsx  progress-ring.tsx  project-card.tsx  project-knowledge-panel.tsx  status-column-header.tsx  status-mini-bar.tsx  top-nav.tsx
src/components/ui/: button.tsx  dialog.tsx  input-group.tsx  sheet.tsx  sonner.tsx  tabs.tsx
src/integrations/tanstack-query/: devtools.tsx
src/lib/: bd-contract.ts  bd.test.ts  bd.ts  desktop.test.ts  desktop.ts  knowledge.test.ts  knowledge.ts  server-validation.test.ts  server-validation.ts  server.ts  sort.test.ts  sort.ts  types.test.ts  types.ts
src/routes/: __root.tsx  index.tsx  p.$project.tsx
